# SatisfactorydleBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
.github/workflows/: deploy.yml
app/: __init__.py  config.py  main.py
app/api/: satisfactorydle_api.py
app/bot/: client.py
app/commands/: embed_helper.py  entity_cache.py  handlers.py
app/domain/: game_mode.py  guild_config.py
app/i18n/: message_manager.py
app/quiz/: __init__.py  quiz_manager.py  session.py
app/storage/: guild_config_manager.py  sqlite.py
app/storage/migrations/: __init__.py
app/utils/: string_utils.py
ops/: cutover-checklist.md  python-operations.md  rollback.md
src/main/java/fr/maxlego08/satisfactorydle/: ApiException.java  CommandListener.java  Config.java  CreateGuildConfigMigration.java  GameMode.java  GuildConfig.java  GuildConfigManager.java  Main.java  MessageManager.java  Messages.java  SatisfactorydleAPI.java  StringUtils.java
src/main/java/fr/maxlego08/satisfactorydle/command/: ConfigCommand.java  EmbedHelper.java  EntityCache.java  GuessCommand.java  QuizCommand.java  QuizManager.java  QuizSession.java  ScoreCommand.java  StartCommand.java
src/main/java/fr/maxlego08/satisfactorydle/config/: Config.java  GameMode.java  GuildConfig.java  GuildConfigManager.java
src/main/java/fr/maxlego08/satisfactorydle/database/: CreateGuildConfigMigration.java
src/main/resources/locales/: en.json  fr.json
tests/: test_api.py  test_i18n.py  test_quiz_manager.py  test_storage.py
(+2 files in other folders)
