[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "satisfactorydle-bot"
version = "2.0.0"
description = "Discord bot for Satisfactorydle (Python rewrite)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
	"discord.py>=2.4.0,<3.0.0",
	"httpx>=0.27.0,<0.28.0",
	"aiosqlite>=0.20.0,<0.21.0",
	"pydantic>=2.9.0,<3.0.0",
	"pydantic-settings>=2.5.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
	"pytest>=8.3.0,<9.0.0",
	"pytest-asyncio>=0.24.0,<0.25.0",
	"ruff>=0.6.0,<0.7.0"
]

[project.scripts]
satisfactorydle-bot = "app.main:run"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["locales/*.json"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
